css/style.css
/******* Variables *******/
:root {
    /* COLORS STUDY 

    * MAIN *
    #141922; | sfondo
    #7c7e83; | testo
    #ffffff; | headers e bottoni

    * SIDEBAR *
    #000000; | sfondo
    #717171; | testi
    #a3a3a3; | icone
    #d2d2d2; | icone active
    #ffffff; | headers e testi active

    * PLAYER *
    #282828; | sfondo
    #5a5a5a; | testo e sfondo barra
    #c1c1c1; | barra
    #ffffff; | headers e bottoni

    * CUSTOM SCROLLBAR *
    #fafafa | background
    #c8c8c8 | thumb
    
    */

    /* palette */
    --col-gray-900: #141922;
    --col-gray-700: #282828;
    --col-gray-500: #5a5a5a;
    --col-gray-400: #7c7e83;
    --col-gray-100: #c1c1c1;
    --col-green: #adff2f;

    /* layout */
    --layout-bottom: 100px;
    --layout-side-sm: 50px;
    --layout-side-md: 200px;

    /* commons */
    --main-header-height: 80px;
}


/******* Resets *******/
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}


/******* Generics *******/
body {
    font-family: 'Montserrat', sans-serif;
    background-color: var(--col-gray-900);
    color: var(--col-gray-400);
}

h2 {
    margin-bottom: 0.5rem;

    color: #fff;
}

p {
    margin-bottom: 1rem;
}

a {
    text-decoration: none;

    /* TODO Remove */
    color: inherit;
}

ul {
    list-style: none;
}

section {
    padding: 1.5rem 1rem;
}


/******* Utils *******/
/* Misc */
.img-fluid {
    max-width: 100%;
    height: auto;
    display: block;
}

.text-center {
    text-align: center;
}

.text-right {
    text-align: right;
}


/******* Layout *******/
/* App Layout */
.layout-top {
    height: calc(100vh - var(--layout-bottom));
    display: flex;
}

.layout-bottom {
    height: var(--layout-bottom);
}

.layout-side {
    flex: 0 0 var(--layout-side-sm);
    overflow: hidden;
}

.layout-main {
    flex-grow: 1;
    overflow-y: auto;
}

/* * custom scrollbar 
.app-layout-content::-webkit-scrollbar,
.sidebar-playlist ul::-webkit-scrollbar {
    width: 10px;
}

.app-layout-content::-webkit-scrollbar-track,
.sidebar-playlist ul::-webkit-scrollbar-track {
    background-color: #fafafa;
}

.app-layout-content::-webkit-scrollbar-thumb,
.sidebar-playlist ul::-webkit-scrollbar-thumb {
    background-color: #c8c8c8;
    border-radius: 0.4rem;
    border: 2px solid #fafafa;
}
*/


/******* Debug *******/
.db-border {
    border: 2px dashed #000;
}

.db-height {
    min-height: 500px;
}

.db-card {
    height: 180px;
    width: 180px;
}

.db-red {
    background-color: red;
}

.db-yellow {
    background-color: yellow;
}

.db-blue {
    background-color: blue;
}

.db-green {
    background-color: green;
}

.db-cyan {
    background-color: cyan;
}

.db-purple {
    background-color: purple;
}


/* ====================================== */
/******* Buttons *******/
/*.btn {
    display: inline-block;
    text-decoration: none;
    text-align: center;
    border: 1px solid transparent;
    cursor: pointer;
    
    padding: 6px 12px;
    color: #000;
    background-color: transparent;
}*/


/******* Icons *******/
.icon {
    width: 28px;
    height: 28px;
    fill: currentColor;
    border-radius: 50%;
    background-color: transparent;
}

.icon.icon-small {
    width: 18px;
    height: 18px;
}

.icon.icon-secondary {
    fill: #fff;
    background-color: var(--col-gray-400);
}


/******* Sidebar *******/
.sidebar {
    display: flex;
    flex-direction: column;
    justify-content: space-between;

    background-color: #000;
}

.sidebar-top {
    display: flex;
    flex-direction: column;

    min-height: 200px;
}

/* Logo */
.sidebar-logo {
    padding: 0.5rem 0;
    margin-bottom: 0.5rem;
    text-align: center;
}

.sidebar-logo .logo-sm {
    width: 32px;
}

.sidebar-logo .logo-md {
    display: none;
}

/* Menu */
.sidebar-menu a {
    display: block;
    padding: 0.25rem 0;
    text-align: center;
    border: 2px solid transparent;
}

.sidebar-menu a.active {
    color: #fff;
}

.sidebar-menu span {
    display: none;
}


/* Playlist */
.sidebar-playlist {
    display: none;
    flex-direction: column;
    padding: 0 1rem;
    margin-top: 1rem;

    min-height: 100px;
}

.sidebar-playlist ul {
    overflow-y: auto;
}


/******* Content Header *******/
.content-header {
    height: var(--main-header-height);
    padding: 1.5rem;
    text-align: right;

    position: sticky;
    top: 0;
    left: 0;

    background-color: rgba(0, 0, 0, 0.5);
}


/******* Content Navbar *******/
.content-navbar ul {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
}

.content-navbar a {
    display: flex;
    align-items: center;
    padding: 0.5rem 1rem;
}

/******* Cards *******/
.cards {
    display: flex;
    flex-wrap: wrap;
    margin-left: -0.25rem;
    margin-right: -0.25rem;

    margin-top: 1.5rem;
}

.card {
    flex-basis: calc(50% - 0.5rem);
    margin: 0.25rem;

    /* TODO REMOVE */
    min-height: 180px;
}


/******* Footer *******/
footer {
    padding: 1rem 0.5rem;
    display: flex;

    background-color: var(--col-gray-700);
}

footer > * {
    flex-basis: calc(100% / 3);
}


/*********************************
 ** RESPONSIVE
 *********************************/
/* Media Query SM */
 @media screen and (min-width: 576px) {
    
    /* App Layout */
    .layout-side {
        flex-basis: var(--layout-side-md);
    }

    /* Sidebar */
    .sidebar {
        align-items: stretch;
    }

    .sidebar-menu span {
        display: inline;
    }

    .sidebar-playlist {
        display: flex;
    }

 }

/* Media Query MD */
 @media screen and (min-width: 768px) {

    /******* Cards *******/
    .card {
        flex-basis: calc(25% - 0.5rem);
    }

 }

/* Media Query LG */
 @media screen and (min-width: 992px) {

    /******* Cards *******/
    .card {
        flex-basis: calc(100% / 6 - 0.5rem);
    }

 }

